Added user post route and associated unit tests.
