# backendSrc/models/users/user.ts
@@ -1,0 +1,10 @@
+/**
+ * A model representing a user model.
+ */
+export interface User{
+    _id?: string;
+    firstName: string;
+    lastName: string;
+    email: string;
+    password: string
+}
