# backendSrc/routes/usersRoutes.ts
@@ -1,0 +1,7 @@
+import express from 'express';
+import { postUser } from '../controllers/usersController';
+
+export const router = express.Router();
+
+router.route('/').post(postUser);
+
